# ipkgs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ipkgs/: __init__.py  __main__.py  exceptions.py
src/ipkgs/cli/: cmd_auth.py  cmd_info.py  cmd_init.py  cmd_install.py  cmd_list.py  cmd_publish.py  cmd_search.py  cmd_uninstall.py  cmd_update.py  main.py
src/ipkgs/core/: installer.py  lockfile.py  manifest.py  package.py  resolver.py
src/ipkgs/registry/: auth.py  client.py
src/ipkgs/utils/: console.py  fs.py  semver.py
tests/: conftest.py  test_lockfile.py  test_manifest.py  test_resolver.py  test_semver.py
