[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "ipkgs"
version = "0.1.0"
description = "A package manager for Verilog IP cores"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ipkgs.com", email = "hi@ipkgs.com" }]
keywords = ["verilog", "fpga", "ip-core", "package-manager", "eda", "rtl"]
classifiers = [
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "click>=8.1,<9",
  "httpx>=0.27,<1",
  "rich>=13,<15",
  "semver>=3.0,<4",
  "pydantic>=2.6,<3",
  "keyring>=25,<26",
  "platformdirs>=4,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "pyfakefs>=5.4",
  "mypy>=1.9",
  "ruff>=0.4",
]

[project.scripts]
ipkgs = "ipkgs.cli.main:cli"

[project.urls]
Homepage = "https://ipkgs.com"
Repository = "https://github.com/ipkgs/ipkgs"

[tool.hatch.build.targets.wheel]
packages = ["src/ipkgs"]

[tool.hatch.version]
path = "src/ipkgs/__init__.py"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
